<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="base_url">http://hawkeye-ix.appspot.com</string>

    <string name="app_name">irisExchange</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_email">E-mail address</string>

    <string name="btn_register">Sign Up</string>
    <string name="btn_login">Log In</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_capture">Capture</string>
    <string name="btn_inbox">Trade Requests</string>

    <string name="link_to_login">Already Registered? Login Here</string>
    <string name="link_to_register">New User? Sign Up Here</string>

    <string name="toast_passwords_dont_match">Passwords must match!</string>
    <string name="toast_not_empty">Enter %s</string>
    <string name="toast_invalid_email">Invalid E-mail</string>

</resources>
